# java-log-analyzer

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_output.json  test_output.md
docs/superpowers/specs/: 2026-06-27-tui-core-advanced-collapse-design.md
src/log_analyzer/: __main__.py  cli.py  exporter.py  logback_pattern.py  logback_xml.py  naming.py  parser.py  tui.py  version.py
src/log_analyzer/application/: analysis_service.py
src/log_analyzer/domain/: logback_pattern.py  parser.py  parser_aggregation.py
src/log_analyzer/infrastructure/: export_csv.py  export_json.py  export_markdown.py  exporter.py  naming.py  paths.py
src/log_analyzer/presentation/: cli.py  cli_args.py  cli_runtime.py  datetime_text.py  error_messages.py  recent_form_state.py  tui.py  tui_dialogs.py  tui_inputs.py  tui_views.py
src/log_analyzer/tcss/: tui.base.tcss  tui.dialog.tcss  tui.layout.tcss  tui.responsive.tcss
tests/: test_analysis_service.py  test_cli_args.py  test_cli_runtime.py  test_exporter.py  test_logback_pattern.py  test_logback_xml.py  test_naming.py  test_parser.py  test_tui.py
