[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "java-log-analyzer"
version = "1.0.2"
description = "A professional Python tool to analyze Java Logback logs."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "mix7ake7411", email = "feng.school@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
log-analyzer = "log_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
